--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -4,8 +4,8 @@
 
 - name: (2019 Fall)Rina -using Maya & Zbrush & MarvelousDesigner & Substance
   i18n: p14
-  url:
-  demo_url: https://gucheng0712.github.io/dev%20journal/2020/01/06/Rina-Creation.html
+  url: https://gucheng0712.github.io/dev%20journal/2020/01/06/Rina-Creation.html
+  demo_url: https://www.bilibili.com/video/av82418948
   img: /static/assets/img/landing/P14.png
   desc: A female samurai character creation during my free time. Using many different kinds of software to increase the workflow, includes, Maya, Zbrush, Substance Suites, RizomUV, Photoshop, Marmoset Toolbag, Marvelous Designer.
 
@@ -15,7 +15,7 @@
   gh_user: gucheng0712
   repo: WISIWIG
   url: https://gucheng0712.github.io/dev%20journal/python/ai/2019/05/12/WISIWYG-Dev-Journal.html
-  demo_url: https://gucheng0712.github.io/dev%20journal/python/ai/2019/05/12/WISIWYG-Dev-Journal.html
+  demo_url: https://www.bilibili.com/video/av52461636
   img: /static/assets/img/landing/P10.png
   desc: An immersive interactive installation technology project that combines visual art and AI to analyzes facial expressions and behaviors for creating interactive works of art and text descriptions.
 
@@ -24,7 +24,7 @@
   gh_user: gucheng0712
   repo: RhythmRPG
   url: https://gucheng0712.github.io/unity/dev%20journal/2018/12/05/Troubadour-Dev-Journal.html
-  demo_url: https://gucheng0712.github.io/unity/dev%20journal/2018/12/05/Troubadour-Dev-Journal.html
+  demo_url: https://www.bilibili.com/video/BV1ht411X7N7
   img: /static/assets/img/landing/P4.png
   desc: An RPG Rhythm Game Demo that collaborated with Game Design & Art Students in the Game Prototype class. Functions Includes Inventory System, Data Saving and Loading, Dialogue, Social Media, Rhythm Gameplay, UI framework, and Storyline, Shopping, Evolving, and so on.
 
@@ -33,7 +33,7 @@
   gh_user: gucheng0712
   repo: Beyond-Atlantis
   url: https://gucheng0712.github.io/dev%20journal/2018/05/12/BeyondAtlantis-Dev-Journal.html
-  demo_url: https://gucheng0712.github.io/dev%20journal/2018/05/12/BeyondAtlantis-Dev-Journal.html
+  # demo_url: https://gucheng0712.github.io/dev%20journal/2018/05/12/BeyondAtlantis-Dev-Journal.html
   img: /static/assets/img/landing/P3.png
   desc: A group project Inspired by Yayoi Kusama’s Infinity Mirrored room, this project was designed to immerse the user into an infinite sea world just by looking the piece of installation. Use GLSL to write color animations in TouchDesigner and use Serial to collect information in Arduino to synchronize LED color animations while using The versatility of the projection map and the depth of the infinite mirror to show a piece of work.
 
@@ -42,7 +42,7 @@
   gh_user: gucheng0712
   repo: Suzuka-wants-to-fly
   url: https://gucheng0712.github.io/dev%20journal/unity/csharp/2018/05/12/Suzuka-Wants-to-Fly-Game-Dev-Journal.html
-  demo_url: https://gucheng0712.github.io/dev%20journal/unity/csharp/2018/05/12/Suzuka-Wants-to-Fly-Game-Dev-Journal.html
+  demo_url: https://www.bilibili.com/video/av37162427
   img: /static/assets/img/landing/P2.png
   desc: A VR Demo Aimed to reduce the problem of motion sickness, used a self create third person view Spiderman style swinging game demo to try to discover a new world in visual reality for reducing this adverse consequence, features includes, FSM for Character Movement, such as wallwalking, third person free style, battle movement and so on. 
   
@@ -58,9 +58,9 @@
 - name: (2017 Fall) Animated Led Sign - using Arduino & P5.js
   i18n: p7
   gh_user: gucheng0712
-  url:
+  url: https://gucheng0712.github.io/dev%20journal/unity/csharp/2018/05/12/Animated-LED-Sign-Dev-Journal.html
   repo: Animated-LED-Sign
-  demo_url: https://gucheng0712.github.io/dev%20journal/unity/csharp/2018/05/12/Animated-LED-Sign-Dev-Journal.html
+  demo_url: https://www.bilibili.com/video/BV17b411W7cc
   img: /static/assets/img/landing/P7.png
   desc: A group project, making an Animated Led Sign built for our Major Applied Computer Science, be able to send msg through Adafruit and change the Led Animation and the Motor movement states by using the P5.js with Arduino, as well as doing a lot of fabrication works. It was exhibited at 2018 Annual Showcase.
 
@@ -87,7 +87,7 @@
 - name: (2017 Spring) A Tragedy of Little Chicks -using P5.js
   i18n: p1
   gh_user: gucheng0712
-  url: https://gucheng0712.github.io/dev%20journal/python/ai/2018/05/12/A-Tragedy-of-Little-Chicks-Dev-Journal.html
+  url: https://gucheng0712.github.io/dev%20journal/2017/12/01/A-Tragedy-of-Little-Chicks-Dev-Journal.html
   repo: A-Tragedy-of-Little-Chicks-P5.js-
   demo_url: https://gucheng0712.github.io/A-Tragedy-of-Little-Chicks-P5.js-/
   img: /static/assets/img/landing/P1.png
@@ -96,28 +96,28 @@
 - name: (2018 Fall) NeverLand - Using Unity & Blender
   i18n: p5
   url: https://gucheng0712.github.io/dev%20journal/unity/2019/05/12/NeverLand-Dev-Journal.html
-  demo_url: https://gucheng0712.github.io/dev%20journal/unity/2019/05/12/NeverLand-Dev-Journal.html 
+  demo_url: https://www.bilibili.com/video/BV1bt411X7JD
   img: /static/assets/img/landing/P5.png
   desc: A Level Design Project for creating a stylized realtime cartoon environment, includes Terrain Sculpting, Shader Programming, Particles, and Camera Movement, and Rendering.
 
 - name: (2017 Spring) 3D Props - using Maya & Quixel & Photoshop
   i18n: p6
-  url:
-  demo_url: https://gucheng0712.github.io/dev%20journal/2017/12/01/3D-Props-Modeling.html
+  url: https://gucheng0712.github.io/dev%20journal/2017/12/01/3D-Props-Modeling.html
+  # demo_url: https://gucheng0712.github.io/dev%20journal/2017/12/01/3D-Props-Modeling.html
   img: /static/assets/img/landing/P6.png
   desc: 3D Props Modelling for Game Code Fundamental class, Created a Lamp, Old Well, Super Long Hidden Blade, and a Revolving Pistol.
 
 - name: (2019 Fall) Fancy House - using Maya & Arnold & Substance
   i18n: p11
-  url:
-  demo_url: https://gucheng0712.github.io/dev%20journal/2019/10/01/Fancy-House-Modeling.html
+  url: https://gucheng0712.github.io/dev%20journal/2019/10/01/Fancy-House-Modeling.html
+  # demo_url: https://gucheng0712.github.io/dev%20journal/2019/10/01/Fancy-House-Modeling.html
   img: /static/assets/img/landing/P11.png
   desc: A Fancy House 3D Creation by using Maya, and Substance Deisnger. The Reference image is created by an Environmental Artist,OKU in Artstation.  
 
 - name: (2019 Fall) Kinki Restaurant - Maya & Arnold & Substance
   i18n: p12
   url: https://gucheng0712.github.io/dev%20journal/2019/10/22/Kinki-Restaurant.html
-  demo_url: https://gucheng0712.github.io/dev%20journal/2019/10/22/Kinki-Restaurant.html
+  demo_url: https://www.bilibili.com/video/BV19E41127UK
   img: /static/assets/img/landing/P12.png
   desc: An Interior Modeling, Texturing and Rendering for a Japanese Restaurant Kinki in Maya and Arnold.  
 
