--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,6 +2,6 @@
 
 label: Ability
 id : cs
-aspects: Shader, Unity, JavaScript, Machine Learing, Python, Maya, Blender, Photoshop, TouchDesigner,Zbrush, Houdini,SubstanceDesigner, Substance Painter
-percentage:  90, 90, 75, 80, 90, 80, 80, 70, 80, 70, 70,80,80
+aspects: Shaderlab, Unity, C#, JavaScript, Machine Learing, Python, Maya, Blender, Photoshop, TouchDesigner,Zbrush,Substance Suites
+percentage:  90, 90, 90, 75, 80, 90, 80, 80, 80, 80, 70,70
 
